# foxlator-lib

./: .coveragerc  .gitignore  pyproject.toml  test-requirements.txt
.github/workflows/: foxlator-lib-pipeline.yml  foxlator-lib-pr-pipeline.yml  foxlator-lib-release.yml  foxlator-lib-smoke-test.yml
src/foxlator_lib/: __init__.py  audio.py  utils.py  video.py
src/foxlator_lib/stt/: whisper_stt.py
src/foxlator_lib/utils/: __init__.py  error.py  file_system.py
test/: basic_tests.py  error_tests.py  test_audio.py  test_error.py  test_video.py  video_tests.py
test/stt/: test_whisper_stt.py
test/utils/: audio_base.py  base.py  video_base.py
