[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foxlator-lib"
version = "0.0.1"
authors = [
  { name="Witold Haza", email="witekha3@gmail.com" },
  { name="Kacper Czyz", email="kacper.czyz@protonmail.com" },
]
description = "Library backend for foxlator"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/skyfox-ai/foxlator-lib"
"Bug Tracker" = "https://github.com/skyfox-ai/foxlator-lib/issues"
